--- a/HACK-6.1-305HACKNOV-1 copy.html
+++ b/HACK-6.1-305HACKNOV-1 copy.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Session B — In-Person · 305 Veterans & DefenseTech Hack</title>
-  <meta name="description" content="Fully in-person sprint for the 305 Veterans & DefenseTech Hack. Saturday 10 AM–11 PM with mentors, judging, food, and swag."/>
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
+  <title>Session A — Online/Synchronous · 305 Veterans & DefenseTech Hack</title>
+  <meta name="description" content="Online/Synchronous session for the 305 Veterans & DefenseTech Hack. Runs Nov 7–15 with mentors, checkpoints, and workshops."/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     :root{ --blue:#0b2a6f; --ink:#111827; --muted:#6b7280; --line:#e5e7eb; --bg:#ffffff; --soft:#f6f8ff; --r:14px; }
@@ -88,27 +88,49 @@
   color: #1557b0;
 }
 
+
+
   </style>
 </head>
 <body>
-<header>
+<!-- small sticky nav -->
+<header class="site-nav">
   <div class="wrap" style="display:flex;justify-content:space-between;align-items:center;">
-    <div class="brand"><i class="fa-solid fa-location-dot"></i> 305 Hackathon Edition Nov 2025 | Session B — Fully In-Person</div>
+    <div class="brand"><i class="fa-solid fa-wifi"></i> 305 Hackathon Edition Nov 2025 - Session A — Online/Synchronous</div>
     <nav><a class="btn alt" href="https://305hacknov2025.vercel.app/">← All Sessions</a></nav>
+  </div>
+</header>
+
+<!-- Page Title / Hero -->
+<header class="w-full bg-gray-50 border-b border-gray-200">
+  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
+    <p class="text-xs sm:text-sm text-gray-500 mb-2">
+      <a href="https://hackuniversity.vercel.app" class="underline hover:no-underline">Hack University</a>
+      <span aria-hidden="true"> / </span>
+            <a href="https://hackuniversity-hackathons.vercel.app" class="underline hover:no-underline">Hackathons</a>
+      <span aria-hidden="true"> / </span>
+            <a href="https://305hacknov2025.vercel.app/" class="underline hover:no-underline">305 Hackathon Edition Nov 2025</a>
+      <span aria-hidden="true"> / </span>
+      Session A | 305 Veterans &amp; DefenseTech Hack
+    </p>
+    <h1 class="text-3xl sm:text-4xl font-extrabold tracking-tight text-gray-900">
+      Session A — Online/Synchronous
+    </h1>
+    <p class="mt-2 text-gray-600 max-w-2xl">
+      Dates: <strong>Fri, Nov 7 → Sat, Nov 15, 2025</strong> (ET).
+    </p>
   </div>
 </header>
 
 <main>
   <section class="hero">
     <div class="wrap">
-      <h1>305 Hackathon Edition Nov 2025 — In-Person Sprint (Sat 10:00 AM – 11:00 PM)</h1>
-      <p>
-        One focused day of building with venue-only workshops, mentors, and live judging. Check in at 10:00 AM; demos begin near closing.
-      </p>
-      <p class="meta" style="margin-top:6px;"><strong>Timeline:</strong> Continuous 12 hrs build window across Nov 15 (ET)</p>
+      <h1>Online Build Sprint (Nov 7–15)</h1>
+      <p>Kickoff Nov 7 and keep building through Nov 15 with mentor hours, checkpoints, and async support.</p>
+      <p class="meta" style="margin-top:6px;"><strong>Timeline:</strong> Continuous 168 hrs build window across Nov 7–15 (ET)</p>
       <div class="notice">
         <strong>Heads up:</strong> The <em>Build</em> challenge prompt is revealed at the <strong>opening ceremony (ET)</strong>.
-        <strong>Live demos presentations are required</strong>; no live demo presentations = <strong>0 points</strong>. RSVP on <strong>Bevy Calendar event</strong> for automatic email updates.
+        <strong>Live demos presentations are required</strong>; no live demo presentations = <strong>0 points</strong>. RSVP on <strong>Bevy</strong> for automatic email updates.
       </div>
       <div class="row" style="margin-top:12px;">
         <a class="btn" href="https://hackuniversity-zoom.vercel.app/" target="_blank" rel="noopener"><i class="fa-solid fa-door-open"></i> Join Opening Ceremony</a>
@@ -123,22 +145,21 @@
       <div class="card">
         <h2>Event Details</h2>
         <div class="meta" style="margin:6px 0 8px">
-          <span><i class="fa-regular fa-calendar"></i> Saturday</span>
-          <span><i class="fa-regular fa-clock"></i> 10:00 AM – 11:00 PM</span>
-          <span><i class="fa-solid fa-building"></i> On-Campus Venue</span>
-          <span><i class="fa-solid fa-utensils"></i> Food & Swag</span>
+          <span><i class="fa-regular fa-calendar"></i> Nov 7–15 (ET)</span>
+          <span><i class="fa-regular fa-clock"></i> Continuous build</span>
+          <span><i class="fa-solid fa-globe"></i> Online/Synchronous</span>
         </div>
-        <p>Plan for:</p>
         <ul class="list">
-          <li>Check-in + kickoff (10:00 AM)</li>
-          <li>Mentor rounds and checkpoints</li>
-          <li>Submission window opens ~9:00 PM</li>
-          <li>Live demos and awards near close</li>
+          <li>Kickoff stream + team formation (Nov 7)</li>
+          <li>Mentor hours and mid-sprint checkpoints</li>
+          <li>Submission window and live demos (Nov 15)</li>
         </ul>
-        <div style="margin-top:10px;display:flex;gap:10px;flex-wrap:wrap">
-          <a class="btn" href="https://events.mlh.io/events/13283-305-hackathon-edition-nov-2025-session-b-fully-in-person-veterans-defensetech-hack" target="_blank" rel="noopener">Register on MLH</a>
-          <a class="btn alt" href="https://hackuniversity-calendar.vercel.app/" target="_blank" rel="noopener">Add to Calendar</a>
+        <div class="row" style="margin-top:10px">
+          <a class="btn" href="http://hackuniversity-registration.vercel.app/" target="_blank" rel="noopener">Register (OneStopForm)</a>
+          <!-- <a class="btn alt" href="#" target="_blank" rel="noopener">RSVP on Bevy</a>
+          <a class="btn alt" href="#" target="_blank" rel="noopener">Participant Perks (APIs &amp; Subs)</a> -->
         </div>
+        <p style="font-size:.9rem;color:var(--muted);margin-top:6px;">Participant Subscriptions/Apis, perks, etc require registration with OneStopForm (use your a gmail account).</p>
       </div>
 
       <div class="card">
@@ -156,36 +177,22 @@
           <span class="pill">Logistics &amp; Mobility</span>
         </div>
       </div>
-
     </div>
   </section>
 
   <section class="section wrap">
     <div class="grid">
-      <div class="card">
-        <h2>Venue & Check-In</h2>
-        <ul class="list">
-          <li>Please bring a photo ID for check-in.</li>
-          <li>Wi-Fi will be provided on site.</li>
-          <li>Food served during lunch and dinner windows.</li>
-          <li>Respect venue policies and MLH Code of Conduct.</li>
-        </ul>
-        <div style="margin-top:10px">
-          <a class="btn alt" href="https://www.google.com/maps?gs_lcrp=EgZjaHJvbWUqEAgBEC4YrwEYxwEYgAQYjgUyCggAEAAY4wIYgAQyEAgBEC4YrwEYxwEYgAQYjgUyBwgCEAAYgAQyCAgDEAAYFhgeMggIBBAAGBYYHjIICAUQABgWGB4yCAgGEAAYFhgeMggIBxAAGBYYHjIICAgQABgWGB4yCAgJEAAYFhge0gEINDc5M2owajeoAgCwAgA&um=1&ie=UTF-8&fb=1&gl=us&sa=X&geocode=KRvwDe0wv9mIMd3HmrLsPNWd&daddr=1590+SW+111th+Ave,+Miami,+FL+33199" target="_blank" rel="noopener">Venue Map (PDF)</a>
-        </div>
-      </div>
-
 <div class="card">
   <h2>Registration Steps</h2>
   <ol class="list">
     <li>
-      RSVP on <strong><a href="https://gdg.community.dev/e/mcvpqa/" target="_blank" rel="noopener noreferrer" class="arrow-link">Bevy Event Ticket <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
+      RSVP on <strong><a href="https://gdg.community.dev/e/mnx2w6/" target="_blank" rel="noopener noreferrer" class="arrow-link">Bevy Event Ticket <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
     </li>
     <li>
       Register on <strong><a href="http://hackuniversity-registration.vercel.app/" target="_blank" rel="noopener noreferrer" class="arrow-link">OneStopForm <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> for tools/perks
     </li>
     <li>
-      Register on <strong><a href="https://305hacknov2025sb.devpost.com/" target="_blank" rel="noopener noreferrer" class="arrow-link">Devpost <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> for submissions
+      Register on <strong><a href="https://305hacknov2025sa.devpost.com/" target="_blank" rel="noopener noreferrer" class="arrow-link">Devpost <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> for submissions
     </li>
     <li>
       Join <strong><a href="http://hackuniversity-registration.vercel.app/" target="_blank" rel="noopener noreferrer" class="arrow-link">Code Crunch Discord <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> (check mentorship channels & schedules)
@@ -194,7 +201,7 @@
       Read <strong><a href="https://hackuniversity-hackerguide.vercel.app" target="_blank" rel="noopener noreferrer" class="arrow-link">Hacker Guide &amp; Toolkit <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
     </li>
     <li>
-      Read <strong><a href="https://www.notion.so/305-Hack-Nov-25-Session-B-In-person-Agenda-29d7c6d4a1d080e0a0ead01c0ac3527a?source=copy_link" target="_blank" rel="noopener noreferrer" class="arrow-link">Event Agenda <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
+      Read <strong><a href="https://www.notion.so/305-Hack-Nov-25-Session-A-Online-Synchronous-Agenda-29d7c6d4a1d0801ca102cd26f9fb41cb?source=copy_link" target="_blank" rel="noopener noreferrer" class="arrow-link">Event Agenda <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
     </li>
     <li>
       Create your <strong><a href="https://github.com/new" target="_blank" rel="noopener noreferrer" class="arrow-link">GitHub repo <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> and make your first commit
@@ -212,7 +219,7 @@
       Complete the <strong><a href="https://docs.google.com/forms/d/e/1FAIpQLScI6FtLI59QtWqzngkwa0ja4IOszrYdFLdPmOYmG-Ltb-dpJA/viewform?usp=dialog" target="_blank" rel="noopener noreferrer" class="arrow-link">Check-in Form <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
     </li>
     <li>
-      Add team members on <strong><a href="https://305hacknov2025sb.devpost.com/" target="_blank" rel="noopener noreferrer" class="arrow-link">Devpost <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> (edits allowed before deadline)
+      Add team members on <strong><a href="https://305hacknov2025sa.devpost.com/" target="_blank" rel="noopener noreferrer" class="arrow-link">Devpost <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> (edits allowed before deadline)
     </li>
     <li>
       Create a <strong><a href="https://github.com/new" target="_blank" rel="noopener noreferrer" class="arrow-link">PUBLIC GitHub repo <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> and make your first commit
@@ -221,10 +228,10 @@
       Check mentorship channels & schedules on <strong><a href="http://hackuniversity-registration.vercel.app/" target="_blank" rel="noopener noreferrer" class="arrow-link">Discord <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
     </li>
     <li>
-      Attend workshops (see <strong><a href="https://www.notion.so/305-Hack-Nov-25-Session-B-In-person-Agenda-29d7c6d4a1d080e0a0ead01c0ac3527a?source=copy_link" target="_blank" rel="noopener noreferrer" class="arrow-link">agenda <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>)
+      Attend workshops (see <strong><a href="https://www.notion.so/305-Hack-Nov-25-Session-A-Online-Synchronous-Agenda-29d7c6d4a1d0801ca102cd26f9fb41cb?source=copy_link" target="_blank" rel="noopener noreferrer" class="arrow-link">agenda <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>)
     </li>
     <li>
-      Submit your project (see <strong><a href="https://www.notion.so/305-Hack-Nov-25-Session-B-In-person-Agenda-29d7c6d4a1d080e0a0ead01c0ac3527a?source=copy_link" target="_blank" rel="noopener noreferrer" class="arrow-link">agenda <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>)
+      Submit your project (see <strong><a href="https://www.notion.so/305-Hack-Nov-25-Session-A-Online-Synchronous-Agenda-29d7c6d4a1d0801ca102cd26f9fb41cb?source=copy_link" target="_blank" rel="noopener noreferrer" class="arrow-link">agenda <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>)
     </li>
     <li>
       See Lives Demos Presentation order (see <strong><a href="https://docs.google.com/spreadsheets/d/12XawEQd-wbwozsYDKwPMr8Uj3yJcgdBinVPxudjWX_w/edit?usp=sharing">List <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>)
@@ -246,9 +253,9 @@
           <li>Devpost (submissions)</li>
         </ul>
         <div class="row" style="margin-top:10px">
-          <a class="btn alt" href="https://www.notion.so/305-Hack-Nov-25-Session-B-In-person-Agenda-29d7c6d4a1d080e0a0ead01c0ac3527a?source=copy_link" target="_blank" rel="noopener">Agenda</a>
+          <a class="btn alt" href="https://www.notion.so/305-Hack-Nov-25-Session-A-Online-Synchronous-Agenda-29d7c6d4a1d0801ca102cd26f9fb41cb?source=copy_link" target="_blank" rel="noopener">Agenda</a>
           <a class="btn" href="https://hackuniversity-hackerguide.vercel.app" target="_blank" rel="noopener">Hacker Guide</a>
-          <a class="btn alt" href="https://305hacknov2025sb.devpost.com/" target="_blank" rel="noopener">Devpost</a>
+          <a class="btn alt" href="https://305hacknov2025sa.devpost.com/" target="_blank" rel="noopener">Devpost</a>
           <a class="btn" href="https://sites.google.com/view/hackuniversitysubscriptions/home" target="_blank" rel="noopener">Subscriptions/APIs/Perks</a>
         </div>
       </div>
@@ -372,4 +379,3 @@
 </script>
 </body>
 </html>
-
