--- a/HACK-6.1-305HACKNOV-1.html
+++ b/HACK-6.1-305HACKNOV-1.html
@@ -130,7 +130,7 @@
       <p class="meta" style="margin-top:6px;"><strong>Timeline:</strong> Continuous 168 hrs build window across Nov 7–15 (ET)</p>
       <div class="notice">
         <strong>Heads up:</strong> The <em>Build</em> challenge prompt is revealed at the <strong>opening ceremony (ET)</strong>.
-        <strong>Live demos presentations are required</strong>; no live demo presentations = <strong>0 points</strong>. RSVP on <strong>Bevy</strong> for automatic email updates.
+        <strong>Live demos presentations are required</strong>; no live demo presentations = <strong>0 points</strong>. RSVP on <strong>Bevy event calendar</strong> for automatic email updates.
       </div>
       <div class="row" style="margin-top:12px;">
         <a class="btn" href="https://hackuniversity-zoom.vercel.app/" target="_blank" rel="noopener"><i class="fa-solid fa-door-open"></i> Join Opening Ceremony</a>
@@ -156,6 +156,7 @@
         </ul>
         <div class="row" style="margin-top:10px">
           <a class="btn" href="http://hackuniversity-registration.vercel.app/" target="_blank" rel="noopener">Register (OneStopForm)</a>
+          <a class="btn alt" href="https://hackuniversity-calendar.vercel.app/" target="_blank" rel="noopener">Add to Calendar</a>
           <!-- <a class="btn alt" href="#" target="_blank" rel="noopener">RSVP on Bevy</a>
           <a class="btn alt" href="#" target="_blank" rel="noopener">Participant Perks (APIs &amp; Subs)</a> -->
         </div>
@@ -177,6 +178,7 @@
           <span class="pill">Logistics &amp; Mobility</span>
         </div>
       </div>
+
     </div>
   </section>
 
