--- a/HACK-6.1-305HACKNOV-1.html
+++ b/HACK-6.1-305HACKNOV-1.html
@@ -188,28 +188,28 @@
   <h2>Registration Steps</h2>
   <ol class="list">
     <li>
-      RSVP on <strong><a href="https://gdg.community.dev/e/mnx2w6/" target="_blank" rel="noopener noreferrer" class="arrow-link">Bevy Event Ticket <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
+      1. RSVP on <strong><a href="https://gdg.community.dev/e/mnx2w6/" target="_blank" rel="noopener noreferrer" class="arrow-link">Bevy Event Ticket <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
     </li>
     <li>
-      Register on <strong><a href="http://hackuniversity-registration.vercel.app/" target="_blank" rel="noopener noreferrer" class="arrow-link">OneStopForm <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> for tools/perks
+      2. Register on <strong><a href="http://hackuniversity-registration.vercel.app/" target="_blank" rel="noopener noreferrer" class="arrow-link">OneStopForm <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> for tools/perks
     </li>
     <li>
-      Register on <strong><a href="https://305hacknov2025sa.devpost.com/" target="_blank" rel="noopener noreferrer" class="arrow-link">Devpost <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> for submissions
+      3. Register on <strong><a href="https://305hacknov2025sa.devpost.com/" target="_blank" rel="noopener noreferrer" class="arrow-link">Devpost <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> for submissions
     </li>
     <li>
-      Join <strong><a href="http://hackuniversity-registration.vercel.app/" target="_blank" rel="noopener noreferrer" class="arrow-link">Code Crunch Discord <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> (check mentorship channels & schedules)
+      4. Join <strong><a href="http://hackuniversity-registration.vercel.app/" target="_blank" rel="noopener noreferrer" class="arrow-link">Code Crunch Discord <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> (check mentorship channels & schedules)
     </li>
     <li>
       Read <strong><a href="https://hackuniversity-hackerguide.vercel.app" target="_blank" rel="noopener noreferrer" class="arrow-link">Hacker Guide &amp; Toolkit <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
     </li>
     <li>
-      Read <strong><a href="https://www.notion.so/305-Hack-Nov-25-Session-A-Online-Synchronous-Agenda-29d7c6d4a1d0801ca102cd26f9fb41cb?source=copy_link" target="_blank" rel="noopener noreferrer" class="arrow-link">Event Agenda <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
+      5. Read <strong><a href="https://www.notion.so/305-Hack-Nov-25-Session-A-Online-Synchronous-Agenda-29d7c6d4a1d0801ca102cd26f9fb41cb?source=copy_link" target="_blank" rel="noopener noreferrer" class="arrow-link">Event Agenda <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
     </li>
     <li>
-      Create your <strong><a href="https://github.com/new" target="_blank" rel="noopener noreferrer" class="arrow-link">GitHub repo <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> and make your first commit
+      6. Create your <strong><a href="https://github.com/new" target="_blank" rel="noopener noreferrer" class="arrow-link">GitHub repo <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> and make your first commit
     </li>
     <li>
-      Submit final links by <strong>Nov 15</strong>
+      7. Submit final links by <strong>Nov 15 @ due time submission</strong>
     </li>
   </ol>
 </div>
@@ -218,25 +218,28 @@
   <h2>Check-in Steps</h2>
   <ol class="list">
     <li>
-      Complete the <strong><a href="https://docs.google.com/forms/d/e/1FAIpQLScI6FtLI59QtWqzngkwa0ja4IOszrYdFLdPmOYmG-Ltb-dpJA/viewform?usp=dialog" target="_blank" rel="noopener noreferrer" class="arrow-link">Check-in Form <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
+      1. Check-in with your Ticket on <strong><a href="https://gdg.community.dev/e/mnx2w6/" target="_blank" rel="noopener noreferrer" class="arrow-link">Bevy Event Ticket <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
     </li>
     <li>
-      Add team members on <strong><a href="https://305hacknov2025sa.devpost.com/" target="_blank" rel="noopener noreferrer" class="arrow-link">Devpost <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> (edits allowed before deadline)
+      2. Complete the <strong><a href="https://docs.google.com/forms/d/e/1FAIpQLScI6FtLI59QtWqzngkwa0ja4IOszrYdFLdPmOYmG-Ltb-dpJA/viewform?usp=dialog" target="_blank" rel="noopener noreferrer" class="arrow-link">Check-in Form <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
     </li>
     <li>
-      Create a <strong><a href="https://github.com/new" target="_blank" rel="noopener noreferrer" class="arrow-link">PUBLIC GitHub repo <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> and make your first commit
+      3. Add team members (if any) on <strong><a href="https://305hacknov2025sa.devpost.com/" target="_blank" rel="noopener noreferrer" class="arrow-link">Devpost <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> (edits allowed before deadline)
     </li>
     <li>
-      Check mentorship channels & schedules on <strong><a href="http://hackuniversity-registration.vercel.app/" target="_blank" rel="noopener noreferrer" class="arrow-link">Discord <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
+      4. Create a <strong><a href="https://github.com/new" target="_blank" rel="noopener noreferrer" class="arrow-link">PUBLIC GitHub repo <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> and make your first commit
     </li>
     <li>
-      Attend workshops (see <strong><a href="https://www.notion.so/305-Hack-Nov-25-Session-A-Online-Synchronous-Agenda-29d7c6d4a1d0801ca102cd26f9fb41cb?source=copy_link" target="_blank" rel="noopener noreferrer" class="arrow-link">agenda <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>)
+      5. Check mentorship channels & schedules on <strong><a href="http://hackuniversity-registration.vercel.app/" target="_blank" rel="noopener noreferrer" class="arrow-link">Discord <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
     </li>
     <li>
-      Submit your project (see <strong><a href="https://www.notion.so/305-Hack-Nov-25-Session-A-Online-Synchronous-Agenda-29d7c6d4a1d0801ca102cd26f9fb41cb?source=copy_link" target="_blank" rel="noopener noreferrer" class="arrow-link">agenda <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>)
+      6. Attend workshops (see <strong><a href="https://www.notion.so/305-Hack-Nov-25-Session-A-Online-Synchronous-Agenda-29d7c6d4a1d0801ca102cd26f9fb41cb?source=copy_link" target="_blank" rel="noopener noreferrer" class="arrow-link">agenda <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>)
     </li>
     <li>
-      See Lives Demos Presentation order (see <strong><a href="https://docs.google.com/spreadsheets/d/12XawEQd-wbwozsYDKwPMr8Uj3yJcgdBinVPxudjWX_w/edit?usp=sharing">List <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>)
+      7. Submit your project (see <strong><a href="https://www.notion.so/305-Hack-Nov-25-Session-A-Online-Synchronous-Agenda-29d7c6d4a1d0801ca102cd26f9fb41cb?source=copy_link" target="_blank" rel="noopener noreferrer" class="arrow-link">agenda <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>)
+    </li>
+    <li>
+      8. View the Live Demos Presentation Order (see <strong><a href="https://docs.google.com/spreadsheets/d/12XawEQd-wbwozsYDKwPMr8Uj3yJcgdBinVPxudjWX_w/edit?usp=sharing">List <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>)
     </li>
   </ol>
 </div>
