--- a/HACK-6.1-305HACKNOV-1.html
+++ b/HACK-6.1-305HACKNOV-1.html
@@ -119,6 +119,12 @@
     <p class="mt-2 text-gray-600 max-w-2xl">
       Dates: <strong>Fri, Nov 7 → Sat, Nov 15, 2025</strong> (ET).
     </p>
+
+        <p class="mt-2 text-gray-600 max-w-2xl">
+   A problem-solving competition with Tech(coding/development) and Technopreneurship (no code - business pitch) tracks.
+</p> 
+
+
   </div>
 </header>
 
@@ -143,7 +149,8 @@
   <section class="section wrap">
     <div class="grid">
       <div class="card">
-        <h2>Event Details</h2>
+                   <h1><strong>Event Details</strong></h1>
+
         <div class="meta" style="margin:6px 0 8px">
           <span><i class="fa-regular fa-calendar"></i> Nov 7–15 (ET)</span>
           <span><i class="fa-regular fa-clock"></i> Continuous build</span>
@@ -164,7 +171,7 @@
       </div>
 
       <div class="card">
-        <h2>Themes</h2>
+           <h1><strong>Themes</strong></h1>
         <p class="meta">Build for impact in defense, veteran services, resilience, and safety.</p>
         <div style="margin-top:6px">
           <span class="pill">Open Worldwide</span>
@@ -185,7 +192,7 @@
   <section class="section wrap">
     <div class="grid">
 <div class="card">
-  <h2>Registration Steps</h2>
+   <h1><strong>Registration Steps - Session A</strong></h1>
   <ol class="list">
     <li>
       1. RSVP on <strong><a href="https://gdg.community.dev/e/mnx2w6/" target="_blank" rel="noopener noreferrer" class="arrow-link">Bevy Event Ticket <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
@@ -215,7 +222,7 @@
 </div>
 
 <div class="card">
-  <h2>Check-in Steps</h2>
+     <h1><strong>Check-in Steps - Session A</strong></h1>
   <ol class="list">
     <li>
       1. Check-in with your Ticket on <strong><a href="https://gdg.community.dev/e/mnx2w6/" target="_blank" rel="noopener noreferrer" class="arrow-link">Bevy Event Ticket <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
@@ -250,18 +257,21 @@
 
 
       <div class="card">
-        <h2>Resources</h2>
+        <h1><strong>Resources</strong></h1>
+
         <ul class="list">
-          <li>Hacker Guide &amp; Toolkit</li>
           <li>Agenda &amp; checkpoints</li>
-          <li>Mentor Directory &amp; Office Hours</li>
+          <li>Hacker Guide &amp; Toolkit</li>
+          <li>Mentor Directory &amp; Office Hours (Find them on Discord Mentorship channels)</li>
+          <li>No Cost Subscriptions/APIs/Perks</li>
           <li>Devpost (submissions)</li>
         </ul>
         <div class="row" style="margin-top:10px">
           <a class="btn alt" href="https://www.notion.so/305-Hack-Nov-25-Session-A-Online-Synchronous-Agenda-29d7c6d4a1d0801ca102cd26f9fb41cb?source=copy_link" target="_blank" rel="noopener">Agenda</a>
           <a class="btn" href="https://hackuniversity-hackerguide.vercel.app" target="_blank" rel="noopener">Hacker Guide</a>
+          <a class="btn alt" href="https://hackuniversitydiscordverify.vercel.app/" target="_blank" rel="noopener">Discord Mentorship channels</a>
+          <a class="btn " href="https://sites.google.com/view/hackuniversitysubscriptions/home" target="_blank" rel="noopener">Subscriptions/APIs/Perks</a>
           <a class="btn alt" href="https://305hacknov2025sa.devpost.com/" target="_blank" rel="noopener">Devpost</a>
-          <a class="btn" href="https://sites.google.com/view/hackuniversitysubscriptions/home" target="_blank" rel="noopener">Subscriptions/APIs/Perks</a>
         </div>
       </div>
     </div>
@@ -320,7 +330,7 @@
               <i class="fab fa-youtube hack-university-social-icon" aria-hidden="true"></i>
               <span class="hack-university-social-text">YouTube</span>
             </a>
-            <a href="https://hackuniversity-discord.vercel.app/" class="hack-university-social-link">
+            <a href="https://hackuniversitydiscordverify.vercel.app/" class="hack-university-social-link">
               <i class="fab fa-discord hack-university-social-icon" aria-hidden="true"></i>
               <span class="hack-university-social-text">Discord</span>
             </a>
