--- a/hackuniversity-hackathons.html
+++ b/hackuniversity-hackathons.html
@@ -417,6 +417,11 @@
     <div class="hackathons-section">
       <h2>🚀 HACK OPERATIONS</h2>
 
+<p class="mt-2 text-gray-600 max-w-2xl">
+   A problem-solving competition with Tech(coding/development) and Technopreneurship (no code - business pitch) tracks.
+</p> <br>
+
+
       <div class="section-header">
         <h3>🚀 ACTIVE MISSIONS</h3>
         <p>Upcoming events sorted by date</p>
