--- a/HACK-6.1-305HACKNOV-0.html
+++ b/HACK-6.1-305HACKNOV-0.html
@@ -87,6 +87,7 @@
 <header class="site-nav">
   <div class="wrap" style="display:flex;justify-content:space-between;align-items:center;">
     <div class="brand"><i class="fa-solid fa-shield"></i> 305 Hackathon | Edition November 2025 | Veterans & DefenseTech Hack</div>
+    
     <nav><a class="btn alt" href="#sessions">Sessions</a></nav>
   </div>
 </header>
@@ -105,6 +106,9 @@
     <p class="mt-2 text-gray-600 max-w-2xl">
       Online Online/Synchronous: <strong>Nov 7–15</strong> · In-Person: <strong>Nov 15</strong> (10 AM–10 PM ET).
     </p>
+    <p class="mt-2 text-gray-600 max-w-2xl">
+   A problem-solving competition with Tech(coding/development) and Technopreneurship (no code - business pitch) tracks.
+</p> 
   </div>
 </header>
 
