--- a/HACK-6.1-305HACKNOV-2.html
+++ b/HACK-6.1-305HACKNOV-2.html
@@ -233,7 +233,7 @@
       5. Create a <strong><a href="https://github.com/new" target="_blank" rel="noopener noreferrer" class="arrow-link">PUBLIC GitHub repo <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> and make your first commit
     </li>
     <li>
-      6. Check mentorship channels & schedules on <strong><a href="http://hackuniversity-registration.vercel.app/" target="_blank" rel="noopener noreferrer" class="arrow-link">Discord <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
+      6. Check mentorship channels & schedules on <strong><a href="https://hackuniversitydiscordverify.vercel.app/" target="_blank" rel="noopener noreferrer" class="arrow-link">Discord <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
     </li>
     <li>
       7. Attend workshops (see <strong><a href="https://www.notion.so/305-Hack-Nov-25-Session-B-In-person-Agenda-29d7c6d4a1d080e0a0ead01c0ac3527a?source=copy_link" target="_blank" rel="noopener noreferrer" class="arrow-link">agenda <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>)
@@ -265,7 +265,7 @@
           <a class="btn alt" href="https://www.notion.so/305-Hack-Nov-25-Session-B-In-person-Agenda-29d7c6d4a1d080e0a0ead01c0ac3527a?source=copy_link" target="_blank" rel="noopener">Agenda</a>
           <a class="btn" href="https://hackuniversity-hackerguide.vercel.app" target="_blank" rel="noopener">Hacker Guide</a>
           <a class="btn alt" href="https://hackuniversitydiscordverify.vercel.app/" target="_blank" rel="noopener">Discord Mentorship channels</a>
-          <a class="btn " href="https://sites.google.com/view/hackuniversitysubscriptions" target="_blank" rel="noopener">Subscriptions/APIs/Perks</a>
+          <a class="btn " href="https://hackuniversity-perks.vercel.app/" target="_blank" rel="noopener">Subscriptions/APIs/Perks</a>
           <a class="btn alt" href="https://305hacknov2025sb.devpost.com/" target="_blank" rel="noopener">Devpost</a>
         </div>
         
