--- a/hackuniversity-onestopform-1.html
+++ b/hackuniversity-onestopform-1.html
@@ -279,6 +279,8 @@
     <p class="text-xs sm:text-sm text-gray-500 mb-2">
       <a href="https://hackuniversity.vercel.app" class="underline hover:no-underline">Hack University</a>
       <span aria-hidden="true"> / </span>
+            <a href="https://hackuniversity-registration.vercel.app/" class="underline hover:no-underline">OneStopForm</a>
+      <span aria-hidden="true"> / </span>
       Members, Registered Hackathon Participants & Membership Certificates
     </p>
     <h1 class="text-3xl sm:text-4xl font-extrabold tracking-tight text-gray-900">
