--- a/HACK-6.1-305HACKNOV-2.html
+++ b/HACK-6.1-305HACKNOV-2.html
@@ -96,21 +96,40 @@
     <div class="brand"><i class="fa-solid fa-location-dot"></i> 305 Hackathon Edition Nov 2025 | Session B — Fully In-Person</div>
     <nav><a class="btn alt" href="https://305hacknov2025.vercel.app/">← All Sessions</a></nav>
   </div>
+
+
+<!-- Page Title / Hero -->
+<header class="w-full bg-gray-50 border-b border-gray-200">
+  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
+    <p class="text-xs sm:text-sm text-gray-500 mb-2">
+      <a href="https://hackuniversity.vercel.app" class="underline hover:no-underline">Hack University</a>
+      <span aria-hidden="true"> / </span>
+            <a href="https://hackuniversity-hackathons.vercel.app" class="underline hover:no-underline">Hackathons</a>
+      <span aria-hidden="true"> / </span>
+            <a href="https://305hacknov2025.vercel.app/" class="underline hover:no-underline">305 Hackathon Edition Nov 2025</a>
+      <span aria-hidden="true"> / </span>
+      Session B | 305 Veterans &amp; DefenseTech Hack
+    </p>
+    <h1 class="text-3xl sm:text-4xl font-extrabold tracking-tight text-gray-900">
+      Session B — Fully In-Person
+    </h1>
+    <p class="mt-2 text-gray-600 max-w-2xl">
+      Dates: <strong>Sat, Nov 15, 2025</strong> (ET).
+    </p>
+        <p class="mt-2 text-gray-600 max-w-2xl">
+   A problem-solving competition with Tech(coding/development) and Technopreneurship (no code - business pitch) tracks.
+</p> 
+
+
+  </div>
 </header>
 
 <main>
+
   <section class="hero">
     <div class="wrap">
-      <h1>305 Hackathon Edition Nov 2025 — In-Person Sprint (Sat 10:00 AM – 11:00 PM)</h1>
-<p class="mt-2 text-gray-600 max-w-2xl">
-   A problem-solving competition with Tech(coding/development) and Technopreneurship (no code - business pitch) tracks.
-</p> 
-      <p>
-        This focused day of building with venue-only workshops, mentors, and live judging. Check in at 10:00 AM; demos begin near closing.
-      </p>
+      <p>This focused day of building with venue-only workshops, mentors, and live judging. Check in at 10:00 AM; demos begin near closing.</p>
       <p class="meta" style="margin-top:6px;"><strong>Timeline:</strong> Continuous 12 hrs build window across Nov 15 (ET)</p>
- 
-
 
       <div class="notice">
         <strong>Heads up:</strong> The <em>Build</em> challenge prompt is revealed at the <strong>opening ceremony (ET)</strong>.
