--- a/HACK-6.1-305HACKNOV-0.html
+++ b/HACK-6.1-305HACKNOV-0.html
@@ -98,6 +98,8 @@
     <p class="text-xs sm:text-sm text-gray-500 mb-2">
       <a href="https://hackuniversity.vercel.app" class="underline hover:no-underline">Hack University</a>
       <span aria-hidden="true"> / </span>
+      <a href="https://hackuniversity-hackathons.vercel.app" class="underline hover:no-underline">Hackathons</a>
+      <span aria-hidden="true"> / </span>
       305 Veterans &amp; DefenseTech Hack
     </p>
     <h1 class="text-3xl sm:text-4xl font-extrabold tracking-tight text-gray-900">
