--- a/HACK-6.1-305HACKNOV-1.html
+++ b/HACK-6.1-305HACKNOV-1.html
@@ -131,8 +131,8 @@
 <main>
   <section class="hero">
     <div class="wrap">
-      <h1>Online Build Sprint (Nov 7–15)</h1>
-      <p>Kickoff Nov 7 and keep building through Nov 15 with mentor hours, checkpoints, and async support.</p>
+      <!-- <h1>Online Build Sprint (Nov 7–15)</h1> -->
+      <p>Kickoff Nov 7 and keep building through Nov 15 with mentor hours, checkpoints, and Remote-friendly support.</p>
       <p class="meta" style="margin-top:6px;"><strong>Timeline:</strong> Continuous 168 hrs build window across Nov 7–15 (ET)</p>
       <div class="notice">
         <strong>Heads up:</strong> The <em>Build</em> challenge prompt is revealed at the <strong>opening ceremony (ET)</strong>.
