--- a/hackathonvolunteer-certificates-305-fall2025-copy.html
+++ b/hackathonvolunteer-certificates-305-fall2025-copy.html
@@ -271,11 +271,11 @@
 
             <div class="body-text">
               <p>In recognition of your outstanding contributions as a <strong>${c.rolesText}</strong> at the
-              <strong>${c.hackathonName}</strong>.</p>
+              <strong>${c.hackathonName}</strong>.</p><p><em>Your insights helped shape a fair and impactful competition experience for all participants.</em></p>
               <br>
               <p><strong>${c.date}</strong> — <span>${c.location}</span></p>
-              <br>
-              <p><em>Your insights helped shape a fair and impactful competition experience for all participants.</em></p>
+              
+              
             </div>
           </div>
 
